--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl_phone_field: ^3.1.0
   pinput: ^3.0.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
