--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   intl_phone_field: ^3.1.0
   pinput: ^3.0.1
   intl: ^0.19.0
+  google_maps_flutter: ^2.1.7
+  geolocator: ^10.1.0
 
 dev_dependencies:
   flutter_test:
