--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<uses-permission android:name="android.permission.INTERNET"/>
 <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <application
         android:label="albrandz_task"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:enableOnBackInvokedCallback="true">
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -21,9 +23,7 @@
               android:name="io.flutter.embedding.android.NormalTheme"
               android:resource="@style/NormalTheme"
               />
-            <meta-data
-             android:name="com.google.android.geo.API_KEY"
-             android:value="AIzaSyAHM4zUKgjKG0scGzWWIj2y91mCBSxT30s"/>
+            
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -35,5 +35,8 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data
+             android:name="com.google.android.geo.API_KEY"
+             android:value="AIzaSyAHM4zUKgjKG0scGzWWIj2y91mCBSxT30s"/>
     </application>
 </manifest>
