--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   intl: ^0.19.0
   google_maps_flutter: ^2.1.7
   geolocator: ^10.1.0
+  http: ^1.0.0
+  fluttertoast: ^8.2.4
+  ndialog: ^4.3.0
 
 dev_dependencies:
   flutter_test:
